# FarmHand

./: .gitignore  CHANGELOG.MD  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: android-release.yml  release.yml
scripts/: extract-changelog.js  restore-version.js  set-numeric-version.js
src/: app.tsx  main.tsx  types.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: api.rs  mod.rs  qr.rs  schema.rs  util.rs
src/UI/: InputCard.tsx  PageHeader.tsx  Section.tsx  SortFilterMenu.tsx
src/UI/components/: CheckboxInput.tsx  CounterInput.tsx  TextInput.tsx  (+3 more)
src/Utils/: Fonts.ts  SavedMatches_TEMP.tsx  StoreManager.ts
src/context/: AnalysisContext.tsx  SchemaContext.tsx  ScoutDataContext.tsx  SettingsContext.tsx  ValidationContext.tsx
src/hooks/: useAsyncFetch.ts  useDrawer.tsx  useFolderManager.ts  useProcessedData.ts  useQrManager.ts  useQrSelection.ts  useQrSortFilter.ts  useSchema.ts  useToggle.ts
src/pages/: Analyses.tsx  AnalysisViewer.tsx  Analyzer.tsx  Archive.tsx  Dashboard.tsx  Home.tsx  QR.tsx  SchemaEditor.tsx  Schemas.tsx  Scout.tsx  Settings.tsx
src/types/: mui.d.ts
src/ui/: ChartRenderer.tsx  EditableComponentCard.tsx  InputCard.tsx  PageHeader.tsx  Section.tsx  SortFilterMenu.tsx
src/utils/: AnalysisUtils.ts  DefaultSchemas.ts  FolderUtils.ts  FormUtils.ts  GeneralUtils.ts  QrUtils.ts  SchemaUtils.ts  StoreManager.ts
(+66 files in other folders)
