[package]
name = "farmhand"
version = "0.2026.3-beta.3"
description = "A FIRST Robotics Competition scouting application."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "farmhand_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
qrcode-generator = "5.0.0"
base64 = "0.22.1"
tauri-plugin-clipboard-manager = "2"
md5 = "0.8.0"
flate2 = "1.1.5"
tauri-plugin-dialog = "2"
reqwest = "0.12.26"
chrono = "0.4.42"

[package.metadata.bundle]
identifier = "com.tractortechs.farmhand"
